# waterNotWaterRecognitionForPatternRecognition

./: .gitignore  CMakeLists.txt  RBFvalues.txt  RBFvaluesBackup.txt  RBFvaluesCharlie.txt  RBFvaluesLaura.txt  RBFvaluesSelene.txt  _iter_2.caffemodel  _iter_2.solverstate  _iter_42.caffemodel  _iter_42.solverstate  imageSegmentorNetSolver.prototxt  imageSegmentorNetTest.prototxt  imageSegmentorNetTrain.prototxt  netNeuralNetworkClassifier5x5With4LeakyRELULayersAndOneIdentityImageOrderShuffledOneEpocpt376Accuracy.txt  runClassifier.sh  svmOutput.txt  svmOutput_Selene.txt
proj02_report/: ECE759 PROJ02 20160410.bbl  ECE759 PROJ02 20160410.blg  ECE759 PROJ02 20160410.tex  Refs.bib
src/executables/bitmapCreator/: main.cpp
src/executables/classifierEvaluator/: main.cpp
